# university-projects

./: README.md
Alghoritms and data structures/Captain/: captain.cpp
Alghoritms and data structures/Cell sorting/: cell_sorting.cpp
Alghoritms and data structures/Highway painting/: highway_painting.cpp
Alghoritms and data structures/Lexicographical comparing/: lex.cpp
Alghoritms and data structures/Manifestations/: manifestations.cpp
Alghoritms and data structures/Matches/: matches.cpp
Alghoritms and data structures/Matrix/: matrix.c
Alghoritms and data structures/Projects/: Inheritance — Abstract Base Classes (ABCs), C++ FAQ.html  Initialization Lists in C++ - Cprogramming.com.html  Liskov substitution principle - Wikipedia.html  Object slicing - Wikipedia.html  Subtyping, Subclassing, and Trouble with OOP.html  Virtual function - Wikipedia.html  dynamic_cast conversion - cppreference.com.html  projects.cpp
Alghoritms and data structures/Relaxation/: relaxation.cpp
Alghoritms and data structures/k-inversions/: k-inversions.cpp
Concurrent programming/: grep-seq-multithread.cpp
Concurrent programming/betweenness-brandes-concurrent/: CMakeLists.txt  brandes.cpp
Concurrent programming/betweenness-brandes-concurrent/test-data/: graph-3.txt  graph-4.txt  result-3.txt  result-4.txt
Concurrent programming/circuit/: CMakeLists.txt  README.txt  circuit.c  err.h  graph.c  graph.h  parser.c  parser.h  stack.c  stack.h
JNP1/task4/: citizen.h
Operating Systems/: 1_create_image.sh  2_new_tab_run.sh  3_mount_sshfc.sh  4_run.sh  5_exchange_ssh_key.sh
(+430 files in other folders)
